# nats-fastapi-issuer-demo

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  RFQ.md  deploy.sh  install.py  pyproject.toml  setup.cfg
demo/: config.json
demo/jwt/: ACDDWLAIXJTTUDQIGU3SWN54CECNOJG3IR5I5WIFC2Y4BOTCLTON7Z5N.jwt  ACJPI3DSZWW3H7XV7FF4IY4YSL4CIOU6YIRRDQV6RG77Y6B6M47TX7BR.jwt
demo/jwt-leaf-custom-operator/: AAN655DWF756EY3U6Q4HFGZVSNTCF22BZI5O4A5RFLUWLDXVMFQULBDD.jwt  ACDDWLAIXJTTUDQIGU3SWN54CECNOJG3IR5I5WIFC2Y4BOTCLTON7Z5N.jwt
demo/leaf-jwt/: ACLXO7K66J6VZQHBYJIN7RRKC436UZSYORAINSJK73EU7ENER6O2S2S4.jwt
demo/leaf-jwt-nosys/: ACDDWLAIXJTTUDQIGU3SWN54CECNOJG3IR5I5WIFC2Y4BOTCLTON7Z5N.jwt  ACLXO7K66J6VZQHBYJIN7RRKC436UZSYORAINSJK73EU7ENER6O2S2S4.jwt
demo/leafnode/: nats.conf  resolver.conf  sys-account.creds
demo/leafnode-custom-account/: kautex.creds  nats.conf  other.creds  resolver.conf
demo/leafnode-noop/: nats.conf  quara.creds
demo/leafnode-nosys/: nats.conf  resolver.conf
demo/nats/: nats.conf  resolver.conf
demo/nomad/: install.sh  sandbox.sh
demo/nomad/jobs/: alertmanager.nomad  grafana.nomad  loki.nomad  prometheus.nomad  restapi.nomad  tempo.nomad
examples/: app.ini  app.json  app.yaml  config.json
src/demo-app/demo_app/: __init__.py  settings.py  spec.py
src/demo-app/demo_app/hooks/: __init__.py  issuer.py
src/demo-app/demo_app/lib/: __init__.py  issuer.py
src/demo-app/demo_app/routes/: __init__.py  demo.py  issuer.py  nats.py
src/demo_app/: __main__.py  annotations.py  container.py  entrypoint.py  errors.py  settings.py  spec.py
src/demo_app/cli/: __init__.py
src/demo_app/hooks/: __init__.py  issuer.py
src/demo_app/lib/: __init__.py  issuer.py
src/demo_app/providers/: cors.py  metrics.py  tracing.py
src/demo_app/providers/logger/: __init__.py
src/demo_app/providers/oidc/: __init__.py  provider.py
src/demo_app/routes/: __init__.py  debug.py  demo.py  issuer.py  nats.py
src/fastapi-wire/wire/: __init__.py  __main__.py
src/fastapi-wire/wire/cli/: __init__.py
src/fastapi-wire/wire/core/: container.py  dependencies.py  injection.py  settings.py  tasks.py  utils.py
src/fastapi-wire/wire/hooks/mongo/: __init__.py  settings.py
src/fastapi-wire/wire/hooks/mongo/motor/: __init__.py  dependencies.py  hook.py  motor_debug_router.py  motor_utils.py
src/fastapi-wire/wire/hooks/mongo/pymongo/: __init__.py  dependencies.py  hook.py  (+2 more)
src/fastapi-wire/wire/hooks/nats/: __init__.py  hook.py  nats_debug_router.py  nats_utils.py  settings.py  subjects.py  subscriptions.py
src/fastapi-wire/wire/providers/: __init__.py  cors.py
src/fastapi-wire/wire/providers/debug/: __init__.py  router.py
src/fastapi-wire/wire/providers/metrics/: prometheus.py
src/fastapi-wire/wire/providers/oidc/: __init__.py  provider.py  security.py
src/fastapi-wire/wire/providers/tracing/: opentelemetry.py
src/quara-wiring/quara/wiring/: __main__.py
src/quara-wiring/quara/wiring/cli/: __init__.py
src/quara-wiring/quara/wiring/core/: __init__.py  dependencies.py  settings.py  spec.py
src/quara-wiring/quara/wiring/providers/: cors.py
src/quara/wiring/: __init__.py
src/quara/wiring/cli/: __init__.py
src/quara/wiring/core/: __init__.py  container.py  dependencies.py  settings.py  spec.py  tasks.py  utils.py
src/quara/wiring/providers/: __init__.py  cors.py
src/quara/wiring/providers/debug/: __init__.py  router.py
src/quara/wiring/providers/logger/: __init__.py
src/quara/wiring/providers/metrics/: __init__.py  prometheus.py
src/quara/wiring/providers/oidc/: __init__.py  errors.py  models.py
src/quara/wiring/providers/tracing/: __init__.py  opentelemetry.py
src/quara/wiring/routers/: debug.py
(+15 files in other folders)
